--- a/src/components/NavbarComponents/NavbarStyles.css
+++ b/src/components/NavbarComponents/NavbarStyles.css
@@ -1,4 +1,5 @@
 .NavbarItems{
+    background: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,7 +12,7 @@
     top: 20px;
     left: 50%;
     transform: translate(-50%);
-    z-index: 1000;
+    z-index: 9999;
 }
 .navbar-logo{
     color: #222;
