--- a/src/components/NavbarComponents/NavbarStyles.css
+++ b/src/components/NavbarComponents/NavbarStyles.css
@@ -1,5 +1,5 @@
 .NavbarItems{
-    background: #fff;
+    background: cadetblue;
     display: flex;
     justify-content: space-between;
     align-items: center;
